--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav {
     color: #3A3A3A;
 }
 
-header{
+header {
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
@@ -87,21 +87,73 @@ header{
     font-size: 16px;
     font-weight: 700;
 }
-.arrow{
+
+.arrow {
     padding-left: 8px;
 }
 
-.line{
+.line {
     height: 1.5px;
     margin: 30px auto;
     background: linear-gradient(90deg, rgba(192, 204, 218, 0.10) 0%, rgba(192, 204, 218, 0.60) 50.38%, rgba(192, 204, 218, 0.10) 100%);
 }
-.sponsors-container{
+
+.sponsors-container {
     display: flex;
     gap: 60px;
     justify-content: center;
 }
 
+
+/* ==========MAIN SECTION========= */
+
+main>h1 {
+    text-align: center;
+    margin: 100px auto 40px auto;
+    color: #3A3A3A;
+    font-family: 'Poppins', sans-serif;
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.product-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.card {
+    border: 0;
+    padding: 17px;
+    width: fit-content;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.product-name {
+    text-align: left;
+    color: #18191F;
+    font-family: 'Poppins', sans-serif;
+    font-size: 28px;
+    font-weight: 500;
+}
+
+.product-price {
+    color: rgba(0, 0, 0, 0.87);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.product-description {
+    width: 200px;
+    color: #787885;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.252px;
+}
 
 
 
@@ -113,38 +165,58 @@ header{
 /* ==========MEDIA QUERY============= */
 
 
-@media screen and (max-width:576px){
-    
-    body{
+@media screen and (max-width:576px) {
+
+    body {
         margin: 20px 30px;
     }
-    .nav-title{
+
+    .nav-title {
         text-align: center;
         justify-content: center;
         align-items: center;
         margin: 0 auto;
     }
-    .nav-bar{
+
+    .nav-bar {
         display: none;
     }
-    header{
+
+    header {
         flex-direction: column-reverse;
-        
+
     }
-    .header-title{
+
+    .header-title {
         text-align: center;
         font-size: 28px;
         line-height: normal
-        /* font-weight: 700; */
+            /* font-weight: 700; */
     }
-    .header-right img{
+
+    .header-right img {
         width: 100%;
     }
-    .header-left{
+
+    .header-left {
         text-align: center;
     }
 
-    .sponsors-container{
-        flex-wrap: wrap;
+    .line {
+        display: none;
     }
+
+    .sponsors-container {
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    
+    .product-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 15px;
+        justify-content: center;
+    }
+
+
 }
