--- a/style.css
+++ b/style.css
@@ -4,19 +4,21 @@
 font-family: 'Poppins', sans-serif;
 font-family: 'Work Sans', sans-serif; */
 
-body {
-    margin: 90px 120px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
 nav {
+    margin-top: 80px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .nav-title {
     color: #3A3A3A;
     font-family: 'Poppins', sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
@@ -27,7 +29,7 @@ nav {
 .nav-bar li {
     list-style: none;
     font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
 }
 
@@ -40,7 +42,7 @@ nav {
 header {
     margin-top: 50px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-bottom: 60px;
 }
 
@@ -58,7 +60,7 @@ header {
     /* width: 580px; */
     color: #3A3A3A;
     font-family: 'Poppins', sans-serif;
-    font-size: 52px;
+    font-size: 3.1rem;
     font-style: normal;
     font-weight: 700;
     line-height: 70px;
@@ -69,7 +71,7 @@ header {
     /* width: 500px; */
     color: #3A3A3A;
     font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 600;
     margin-bottom: 16px;
@@ -84,7 +86,7 @@ header {
     background: #E02C6D;
     color: #FFF;
     font-family: 'Poppins', sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
 }
 
@@ -112,15 +114,17 @@ main>h1 {
     margin: 100px auto 40px auto;
     color: #3A3A3A;
     font-family: 'Poppins', sans-serif;
-    font-size: 28px;
+    font-size: 1.8rem;
     font-weight: 600;
 }
 
 .product-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 330px);
     gap: 30px;
     justify-content: center;
+    align-items: center;
+
 }
 
 .card {
@@ -136,14 +140,14 @@ main>h1 {
     text-align: left;
     color: #18191F;
     font-family: 'Poppins', sans-serif;
-    font-size: 28px;
+    font-size: 1.7rem;
     font-weight: 500;
 }
 
 .product-price {
     color: rgba(0, 0, 0, 0.87);
     font-family: Inter;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
@@ -151,7 +155,7 @@ main>h1 {
     width: 200px;
     color: #787885;
     font-family: Inter;
-    font-size: 14px;
+    font-size: 0.9rem;
     font-weight: 700;
     letter-spacing: 0.252px;
 }
@@ -159,40 +163,42 @@ main>h1 {
 .see-more {
     color: rgba(224, 44, 109, 0.87);
     font-family: Poppins;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
     margin-right: 15px;
+    margin-top: 15px;
     padding: 5px;
-   text-align: right;
+    text-align: right;
+    margin-right: 220px;
 }
 
-/* .see-more img {
-    padding-left: 5px;
-} */
+/* =============  BOTTOM SECTION =========== */
 
 .bottom-section {
-    margin-top: 100px;
+
     display: flex;
     justify-content: space-between;
     gap: 100px;
+    align-items: center;
+    margin: 100px 165px;
 
 }
 
+.featured-product-section {}
 
 .featured-product-section h1 {
     color: #0A0826;
     font-family: Poppins;
-    font-size: 38px;
+    font-size: 2.4rem;
     font-style: normal;
     font-weight: 700;
 }
 
 .featured-product-section p {
+    margin: 1rem 0;
     color: #6C6C6C;
-    font-feature-settings: 'clig' off, 'liga' off;
     font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
+    font-size: 1rem;
     font-weight: 700;
     line-height: 28px;
 }
@@ -205,10 +211,55 @@ main>h1 {
     background: #E02C6D;
     color: #FFF;
     font-family: Poppins;
-    font-size: 16px;
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+/* ================ FOOTER SECTION =========== */
+
+footer {
+    margin-top: 50px;
+    background: #0A0826;
+    text-align: center;
+   padding: 50px;
+
+}
+
+.footer-title {
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 1.5rem;
     font-weight: 700;
 
 }
+
+.footer-para {
+    color: #D9DBE1;
+    font-family: poppins;
+    font-size: 0.9rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+
+}
+.footer-icon{
+    display: flex;
+    margin-top: 17px;
+    justify-content: center;
+    gap: 1rem;
+
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* ==========MEDIA QUERY============= */
@@ -216,9 +267,9 @@ main>h1 {
 
 @media screen and (max-width:576px) {
 
-    body {
+    /* body {
         margin: 20px 30px;
-    }
+    } */
 
     .nav-title {
         text-align: center;
@@ -233,6 +284,7 @@ main>h1 {
 
     header {
         flex-direction: column-reverse;
+        gap: 20px;
 
     }
 
@@ -244,7 +296,9 @@ main>h1 {
     }
 
     .header-right img {
-        width: 100%;
+        width: 70%;
+        margin: 0 60px;
+
     }
 
     .header-left {
@@ -260,17 +314,37 @@ main>h1 {
         gap: 30px;
     }
 
-    .product-container {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 15px;
-        justify-content: center;
-    }
-    .bottom-section{
-        margin-top: 50px;
-        display: flex;
-        flex-direction: column-reverse;
-        gap:40px ;
+    .sponsors-container img {
+        width: 60px;
     }
 
+    .product-container {
+        margin: 0 auto;
+        grid-template-columns: 1fr;
+        gap: 15px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card {
+        margin: 0 auto;
+    }
+
+    .see-more {
+        margin: 50px;
+    }
+
+    .bottom-section {
+        margin-top: 0;
+        margin: 15px;
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 40px;
+        text-align: center;
+        /* grid-auto-columns: auto; */
+    }
+
+    .featured-product-section h1{
+       text-align: center;
+    }
 }
